--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/history": "^4.7.10",
     "@types/react-router-dom": "^5.1.7",
     "@voiceflow/general-types": "^1.50.3",
     "axios": "^0.21.1",
